--- a/azure-vote-all-in-one-redis.yaml
+++ b/azure-vote-all-in-one-redis.yaml
@@ -58,7 +58,7 @@ spec:
       containers:
       - name: azure-vote-front
         #image: mcr.microsoft.com/azuredocs/azure-vote-front:v1
-        image: hloacr.azurecr.io/azure-vote-front:v1
+        image: hloacr2.azurecr.io/azure-vote-front:v1
         ports:
         - containerPort: 80
         resources:
